# Memory-Manager

Memory_Manager/Memory_Manager-main/: CMakeLists.txt  README.md  a.out
Memory_Manager/Memory_Manager-main/src/: allocator.cpp  allocator.h  deque.c  deque.h  test.c  tpt.c
